[gd_scene load_steps=7 format=3 uid="uid://5w4uh0btd1e7"]

[ext_resource type="Texture2D" uid="uid://d3vdxm3cqdw5p" path="res://Sprites/UI/TaskContainerBackground.png" id="1_5ecxg"]
[ext_resource type="Script" path="res://Scripts/TaskContainer.gd" id="1_s1dvy"]
[ext_resource type="PackedScene" uid="uid://5un22ev8q44w" path="res://Scenes/TaskSlot.tscn" id="2_fufwp"]
[ext_resource type="Script" path="res://Scripts/CheckButton.gd" id="4_xgv8j"]

[sub_resource type="SystemFont" id="SystemFont_ig5bb"]

[sub_resource type="LabelSettings" id="LabelSettings_66he5"]
font = SubResource("SystemFont_ig5bb")
font_size = 32
font_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.117647)
shadow_offset = Vector2(2, 2)

[node name="TaskContainer" type="Node2D"]
script = ExtResource("1_s1dvy")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_5ecxg")

[node name="TaskAnswers" type="Node2D" parent="."]

[node name="TaskAnswerSlot1" parent="TaskAnswers" instance=ExtResource("2_fufwp")]
offset_left = -372.0
offset_top = -127.0
offset_right = -252.0
offset_bottom = -63.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 1.1

[node name="TaskAnswerSlot2" parent="TaskAnswers" instance=ExtResource("2_fufwp")]
offset_left = -220.0
offset_top = -80.0
offset_right = -100.0
offset_bottom = -16.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 1.1

[node name="TaskAnswerSlot3" parent="TaskAnswers" instance=ExtResource("2_fufwp")]
offset_left = -62.0
offset_top = -127.0
offset_right = 58.0
offset_bottom = -63.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 1.1

[node name="TaskAnswerSlot4" parent="TaskAnswers" instance=ExtResource("2_fufwp")]
offset_left = 88.0
offset_top = -79.0
offset_right = 208.0
offset_bottom = -15.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 1.1

[node name="TaskAnswerSlot5" parent="TaskAnswers" instance=ExtResource("2_fufwp")]
offset_left = 253.0
offset_top = -127.0
offset_right = 373.0
offset_bottom = -63.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 1.1

[node name="Task" type="Node2D" parent="."]

[node name="TaskSlot1" parent="Task" instance=ExtResource("2_fufwp")]
offset_left = -221.0
offset_top = -288.0
offset_right = -101.0
offset_bottom = -224.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 1.1

[node name="TaskSlot2" parent="Task" instance=ExtResource("2_fufwp")]
offset_left = -221.0
offset_top = -220.0
offset_right = -101.0
offset_bottom = -156.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 1.1

[node name="TaskSlot3" parent="Task" instance=ExtResource("2_fufwp")]
offset_left = -97.0
offset_top = -255.0
offset_right = 23.0
offset_bottom = -191.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 1.1

[node name="TaskSlot4" parent="Task" instance=ExtResource("2_fufwp")]
offset_left = 30.0
offset_top = -256.0
offset_right = 150.0
offset_bottom = -192.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 1.1

[node name="TaskSlot5" parent="Task" instance=ExtResource("2_fufwp")]
offset_left = 156.0
offset_top = -256.0
offset_right = 276.0
offset_bottom = -192.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 1.1

[node name="Label" type="Label" parent="."]
offset_left = -384.0
offset_top = -283.0
offset_right = -240.0
offset_bottom = -160.0
text = "Собери предел"
label_settings = SubResource("LabelSettings_66he5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CheckButton" type="Button" parent="."]
offset_left = 292.0
offset_top = -191.0
offset_right = 390.0
offset_bottom = -151.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.262745, 0.262745, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0.694118, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0, 0.266667, 1)
theme_override_font_sizes/font_size = 16
text = "Проверить"
flat = true
script = ExtResource("4_xgv8j")

[connection signal="checkFailed" from="." to="CheckButton" method="_on_task_container_check_failed"]
[connection signal="taskCleared" from="." to="CheckButton" method="_on_task_container_task_cleared"]
[connection signal="button_down" from="CheckButton" to="." method="_on_check_button_button_down"]
[connection signal="checkTryExceeded" from="CheckButton" to="." method="toggleVisibility"]
